--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
     "node-schedule": "^2.1.1",
     "nunjucks": "^3.2.4",
     "passport": "^0.6.0",
-    "sequelize": "^6.33.0",
-    "sequelize-cli": "^6.6.1",
+    "sequelize": "^6.35.1",
+    "sequelize-cli": "^6.6.2",
     "socket-io": "^1.0.0",
     "socket.io": "^4.7.2",
     "sse": "^0.0.8"
